<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gold_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/maroon_primary"
        app:title="@string/feat_settings"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_location"
            android:textStyle="bold"
            android:textColor="@color/text_red"
            android:textSize="16sp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/etLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_latitude"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/etLon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_longitude"
            android:inputType="numberDecimal|numberSigned"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/maroon_primary"
            android:textColor="@color/white"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</LinearLayout>
